--- a/components/02-molecules/navigation/navigation.css
+++ b/components/02-molecules/navigation/navigation.css
@@ -23,8 +23,7 @@
     width: 100%;
 
     & .button {
-      width: 100%!important;
-      box-sizing: border-box;
+      width: 100%;
     }
   }
 }
